// automatically generated by the FlatBuffers compiler, do not modify

package survival2d.flatbuffers;

import java.nio.*;
import java.lang.*;
import java.util.*;
import com.google.flatbuffers.*;

@SuppressWarnings("unused")
public final class BackPackItem extends Table {
  public static void ValidateVersion() { Constants.FLATBUFFERS_1_12_0(); }
  public static BackPackItem getRootAsBackPackItem(ByteBuffer _bb) { return getRootAsBackPackItem(_bb, new BackPackItem()); }
  public static BackPackItem getRootAsBackPackItem(ByteBuffer _bb, BackPackItem obj) { _bb.order(ByteOrder.LITTLE_ENDIAN); return (obj.__assign(_bb.getInt(_bb.position()) + _bb.position(), _bb)); }
  public void __init(int _i, ByteBuffer _bb) { __reset(_i, _bb); }
  public BackPackItem __assign(int _i, ByteBuffer _bb) { __init(_i, _bb); return this; }

  public byte type() { int o = __offset(4); return o != 0 ? bb.get(o + bb_pos) : 0; }

  public static int createBackPackItem(FlatBufferBuilder builder,
      byte type) {
    builder.startTable(1);
    BackPackItem.addType(builder, type);
    return BackPackItem.endBackPackItem(builder);
  }

  public static void startBackPackItem(FlatBufferBuilder builder) { builder.startTable(1); }
  public static void addType(FlatBufferBuilder builder, byte type) { builder.addByte(0, type, 0); }
  public static int endBackPackItem(FlatBufferBuilder builder) {
    int o = builder.endTable();
    return o;
  }

  public static final class Vector extends BaseVector {
    public Vector __assign(int _vector, int _element_size, ByteBuffer _bb) { __reset(_vector, _element_size, _bb); return this; }

    public BackPackItem get(int j) { return get(new BackPackItem(), j); }
    public BackPackItem get(BackPackItem obj, int j) {  return obj.__assign(__indirect(__element(j), bb), bb); }
  }
}

