// automatically generated by the FlatBuffers compiler, do not modify

package survival2d.flatbuffers;

import java.nio.*;
import java.lang.*;
import java.util.*;
import com.google.flatbuffers.*;

@SuppressWarnings("unused")
public final class BulletItem extends Table {
  public static void ValidateVersion() { Constants.FLATBUFFERS_1_12_0(); }
  public static BulletItem getRootAsBulletItem(ByteBuffer _bb) { return getRootAsBulletItem(_bb, new BulletItem()); }
  public static BulletItem getRootAsBulletItem(ByteBuffer _bb, BulletItem obj) { _bb.order(ByteOrder.LITTLE_ENDIAN); return (obj.__assign(_bb.getInt(_bb.position()) + _bb.position(), _bb)); }
  public void __init(int _i, ByteBuffer _bb) { __reset(_i, _bb); }
  public BulletItem __assign(int _i, ByteBuffer _bb) { __init(_i, _bb); return this; }

  public byte type() { int o = __offset(4); return o != 0 ? bb.get(o + bb_pos) : 0; }
  public int numBullet() { int o = __offset(6); return o != 0 ? bb.getInt(o + bb_pos) : 0; }

  public static int createBulletItem(FlatBufferBuilder builder,
      byte type,
      int numBullet) {
    builder.startTable(2);
    BulletItem.addNumBullet(builder, numBullet);
    BulletItem.addType(builder, type);
    return BulletItem.endBulletItem(builder);
  }

  public static void startBulletItem(FlatBufferBuilder builder) { builder.startTable(2); }
  public static void addType(FlatBufferBuilder builder, byte type) { builder.addByte(0, type, 0); }
  public static void addNumBullet(FlatBufferBuilder builder, int numBullet) { builder.addInt(1, numBullet, 0); }
  public static int endBulletItem(FlatBufferBuilder builder) {
    int o = builder.endTable();
    return o;
  }

  public static final class Vector extends BaseVector {
    public Vector __assign(int _vector, int _element_size, ByteBuffer _bb) { __reset(_vector, _element_size, _bb); return this; }

    public BulletItem get(int j) { return get(new BulletItem(), j); }
    public BulletItem get(BulletItem obj, int j) {  return obj.__assign(__indirect(__element(j), bb), bb); }
  }
}

