@startuml

title __ITEM's Class Diagram__\n

  namespace survival2d {
    namespace match.entity.item {
      class survival2d.match.entity.item.BackPackItem {
          + getBackPackType()
          + getItemType()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.item {
      class survival2d.match.entity.item.BandageItem {
          + getItemType()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.item {
      class survival2d.match.entity.item.BulletItem {
          ~ numBullet : long
          + BulletItem()
          + getBulletType()
          + getItemType()
          + getNumBullet()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.item {
      class survival2d.match.entity.item.GunItem {
          ~ numBullet : long
          + GunItem()
          + getGunType()
          + getItemType()
          + getNumBullet()
          + getWeaponType()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.item {
      class survival2d.match.entity.item.HelmetItem {
          + getHelmetType()
          + getItemType()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.item {
      class survival2d.match.entity.item.ItemOnMap {
          ~ id : int
          ~ position : Vector2D
          {static} + builder()
          + equals()
          + getId()
          + getItem()
          + getItems()
          + getPosition()
          + getShape()
          + hashCode()
          + setId()
          + setItem()
          + setPosition()
          + toString()
          # canEqual()
          ~ ItemOnMap()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.item {
      class survival2d.match.entity.item.ItemOnMap.ItemOnMapBuilder {
          - id : int
          - position : Vector2D
          + build()
          + id()
          + item()
          + position()
          + toString()
          ~ ItemOnMapBuilder()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.item {
      class survival2d.match.entity.item.MedKitItem {
          + getItemType()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.item {
      class survival2d.match.entity.item.PillItem {
          + getItemType()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.item {
      class survival2d.match.entity.item.SkinItem {
          + getItemType()
          + getSkinType()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.item {
      class survival2d.match.entity.item.SodaItem {
          + getItemType()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.item {
      class survival2d.match.entity.item.VestItem {
          + getItemType()
          + getVestType()
      }
    }
  }
  

  survival2d.match.entity.item.BackPackItem .up.|> survival2d.match.entity.base.Item
  survival2d.match.entity.item.BackPackItem o-- survival2d.match.entity.item.BackPackType : backPackType
  survival2d.match.entity.item.BackPackItem o-- survival2d.match.entity.item.ItemType : itemType
  survival2d.match.entity.item.BandageItem .up.|> survival2d.match.entity.base.Item
  survival2d.match.entity.item.BandageItem o-- survival2d.match.entity.item.ItemType : itemType
  survival2d.match.entity.item.BulletItem .up.|> survival2d.match.entity.base.Item
  survival2d.match.entity.item.BulletItem o-- survival2d.match.entity.item.BulletType : bulletType
  survival2d.match.entity.item.BulletItem o-- survival2d.match.entity.item.ItemType : itemType
  survival2d.match.entity.item.GunItem .up.|> survival2d.match.entity.base.Item
  survival2d.match.entity.item.GunItem o-- survival2d.match.entity.item.GunType : gunType
  survival2d.match.entity.item.GunItem o-- survival2d.match.entity.item.ItemType : itemType
  survival2d.match.entity.item.GunItem o-- survival2d.match.entity.item.WeaponType : weaponType
  survival2d.match.entity.item.HelmetItem .up.|> survival2d.match.entity.base.Item
  survival2d.match.entity.item.HelmetItem o-- survival2d.match.entity.item.HelmetType : helmetType
  survival2d.match.entity.item.HelmetItem o-- survival2d.match.entity.item.ItemType : itemType
  survival2d.match.entity.item.ItemOnMap .up.|> survival2d.match.entity.base.Containable
  survival2d.match.entity.item.ItemOnMap .up.|> survival2d.match.entity.base.MapObject
  survival2d.match.entity.item.ItemOnMap o-- survival2d.match.entity.base.Item : item
  survival2d.match.entity.item.ItemOnMap o-- survival2d.match.entity.base.Circle : shape
  survival2d.match.entity.item.ItemOnMap +-down- survival2d.match.entity.item.ItemOnMap.ItemOnMapBuilder
  survival2d.match.entity.item.ItemOnMap.ItemOnMapBuilder o-- survival2d.match.entity.base.Item : item
  survival2d.match.entity.item.MedKitItem .up.|> survival2d.match.entity.base.Item
  survival2d.match.entity.item.MedKitItem o-- survival2d.match.entity.item.ItemType : itemType
  survival2d.match.entity.item.PillItem .up.|> survival2d.match.entity.base.Item
  survival2d.match.entity.item.PillItem o-- survival2d.match.entity.item.ItemType : itemType
  survival2d.match.entity.item.SkinItem .up.|> survival2d.match.entity.base.Item
  survival2d.match.entity.item.SkinItem o-- survival2d.match.entity.item.ItemType : itemType
  survival2d.match.entity.item.SkinItem o-- survival2d.match.entity.item.SkinType : skinType
  survival2d.match.entity.item.SodaItem .up.|> survival2d.match.entity.base.Item
  survival2d.match.entity.item.SodaItem o-- survival2d.match.entity.item.ItemType : itemType
  survival2d.match.entity.item.VestItem .up.|> survival2d.match.entity.base.Item
  survival2d.match.entity.item.VestItem o-- survival2d.match.entity.item.ItemType : itemType
  survival2d.match.entity.item.VestItem o-- survival2d.match.entity.item.VestType : vestType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
